<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <ScrollView
        android:id="@+id/register_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/et_register_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="Ime"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_register_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="Prezime"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_register_first_name" />

            <EditText
                android:id="@+id/et_register_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="Email adresa"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_register_last_name" />

            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_register_email" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password_string"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_register_username" />

            <EditText
                android:id="@+id/et_register_repeated_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password2_string"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_register_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prijavi se"
        android:backgroundTint="@android:color/darker_gray"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_scroll_view" />

    <TextView
        android:id="@+id/tv_register_unsuccessful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/red"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

